Second round of MVP updates

--- a/src/css/about.less
+++ b/src/css/about.less
@@ -32,12 +32,46 @@ body.about {
       border-radius: 0;
     }
     .threec {
-      padding-top: @spacer-20;
+      margin-bottom: @spacer-40;
     }
   }
   .philosophy {
-    padding-top: @spacer-50;
+    padding-top: @spacer-70;
     background-color: @blk-md;
+    .head {
+      h2 {
+        margin-bottom: @spacer-40;
+      }
+      p {
+        margin-bottom: @spacer-40;
+      }
+    }
+    .panel-body {
+      padding: 35px;
+      padding-top: 45px;
+    }
+    .train {
+      padding-top: @spacer-40;
+      .buttons {
+        padding-top: @spacer-30;
+        padding-bottom: @spacer-30;
+      }
+      .btn {
+        background-color: @yell-lt;
+        color: @blk;
+        font-size: 1em;
+        font-weight: 900;
+        padding: 15px;
+        padding-left: 30px;
+        padding-right: 30px;
+        margin-bottom: @spacer-20;
+        letter-spacing: 2px;
+        &:hover {
+          color: @blk;
+          background-color: @yell-lt;
+        }
+      }
+    }
   }
   .instagram {
     padding-top: @spacer-50;
