--- a/src/css/cta.less
+++ b/src/css/cta.less
@@ -12,11 +12,16 @@
 	}
 	h2 {
 		color: @blk;
+		font-size: 3.5em;
+		font-weight: 900;
 	}
 	.btn {
 		font-size: 1em;
 		letter-spacing: 3px;
 		font-weight: 900;
+		padding: 15px;
+		padding-left: 30px;
+		padding-right: 30px;
 	}
 	.btn-white {
 		background-color: @white-lt;
