--- a/src/css/elements.less
+++ b/src/css/elements.less
@@ -54,6 +54,7 @@
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+  font-family: "Mont", sans-serif;
 }
 
 .btn:hover,
@@ -124,6 +125,13 @@
       color: #999;
     }
   }
+}
+
+.list-group-item {
+    padding: 0;
+    margin-bottom: -1px;
+    background-color: @blk;
+    border: none;
 }
 
 .line {
