--- a/src/css/forms.less
+++ b/src/css/forms.less
@@ -27,7 +27,7 @@
     -moz-border-radius: 0;
     min-height: 45px;
     border-radius: 0;
-    font-size: 12px;
+    font-size: 1em;
     color: @white-lt;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
@@ -74,6 +74,8 @@
     color: @blk;
     text-transform: none;
     font-weight: 900;
+    letter-spacing: 1px;
+    text-transform: uppercase;
   }
   input {
     &:valid {
