--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -3,6 +3,10 @@
 .lato {
 	font-family: "Lato", cursive;
 }
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+.mont {
+	font-family: "Montserrat", cursive;
+}
 
 /* Variables */
 /* theme colors */
@@ -20,6 +24,10 @@
 @spacer-30: 30px;
 @spacer-40: 40px;
 @spacer-50: 50px;
+@spacer-60: 60px;
+@spacer-70: 70px;
+@spacer-80: 80px;
+@spacer-90: 90px;
 @spacer-100: 100px;
 
 //== Media queries breakpoints
