--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -14,7 +14,7 @@ pageid: "about"
         <div class="row">
             <div class="col-md-4">
                 <div class="img">
-                    <h3>Andrew Husmann</h3>
+                    <h3><span>Andrew Husmann</span></h3>
                     <p class="text-center"><img src="img/team-andrew.jpg" class="img-responsive"></p>
                 </div>
                 <p>Andrew is an experienced and certified coach, and has spent many years coaching world class competitors in both childrens and adults BJJ, Muay Thai Kickboxing and MMA.</p>
@@ -44,7 +44,7 @@ pageid: "about"
 </section>
 <section class="philosophy">
     <div class="container">
-        <div class="row">
+        <div class="row head">
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <div>
                     <h2>Our Philosophy</h2>
@@ -57,7 +57,7 @@ pageid: "about"
                 <h3 class="threec">We focus on 3 Cs:</h3>
             </div>
         </div>
-        <div class="row row-flex row-flex-wrap">
+        <div class="row row-flex row-flex-wrap focus">
             <div class="col-sm-4">
                 <div class="panel panel-default">
                     <div class="panel-body">
@@ -81,6 +81,11 @@ pageid: "about"
                         <p>Ultimately we are creating a community of people with a shared passion and love for their sport.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="row train">
+            <div class="col-sm-12 text-center">
+                <a href="contact.html" role="button" class="btn text-center">Come train with us!</a>
             </div>
         </div>
     </div>
