--- a/src/html/pages/contact.hbs
+++ b/src/html/pages/contact.hbs
@@ -15,7 +15,7 @@ pageid: "contact"
                     <h2>Movement Martial Arts</h2>
                     <p><strong>Building 1,<br>35 Waterloo Road,<br>Macquarie Park 2113</strong></p>
                     <p class="big"><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:0298871230" class="hidden-md hidden-lg">(02) 9887 1230</a><span class="hidden-xs hidden-sm">(02) 9887 1230</span></p>
-                    <p class="big"><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:hello@movementmartialarts.com.au">hello@movementmartialarts.com.au</a></p>
+                    <p class="big"><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@movementmartialarts.com.au">info@movementmartialarts.com.au</a></p>
                 </div>
                 <div class="col-md-4 black">
                     {{> form button="Click to contact us!"}}
