--- a/src/html/pages/kids.hbs
+++ b/src/html/pages/kids.hbs
@@ -6,20 +6,27 @@ type: "kids"
 ---
 <h2>Kids BJJ <br>Classes</h2>
 <p><strong>Our Brazilian Jiu Jitsu program caters for kids 5 to 14 years old.</strong></p>
-<p>Brazilian Jiu Jitsu (BJJ) is a grappling art used to take your opponent to the ground, controlling them
-with position and finishing with a submission. BJJ was designed for a smaller person using technique
-and leverage to defeat a much larger opponent.</p>
-<p>Our classes are specifically tailored and designed for a child’s developing mind and body, with
-activities which teach real-life technique in a fun and engaging way.</p>
-<p>Through our syllabus your child will develop discipline, respect, grit and self-confidence in a fun,
-clean, and most importantly safe environment. They will also develop physical skills and technique
-that can help your child defend themselves in a difficult situation.</p>
-<p>Many of our students choose to compete in the sporting aspect of BJJ, gaining titles such as State
-Champion, National Champion &amp; even World Champion. We also have many students who opt not
-to compete, and we spend an equal amount of time and energy developing both.</p>
-<p>All our instructors are accredited and highly experienced coaches with complete and regular working
-with children checks.</p>
-<p>Our students love our classes, come check them out for yourselves!</p>
+<div class="hidden-xs">
+	<p>Brazilian Jiu Jitsu (BJJ) is a grappling art used to take your opponent to the ground, controlling them
+		with position and finishing with a submission. BJJ was designed for a smaller person using technique
+	and leverage to defeat a much larger opponent.</p>
+	<p>Our classes are specifically tailored and designed for a child’s developing mind and body, with
+	activities which teach real-life technique in a fun and engaging way.</p>
+	<p>Through our syllabus your child will develop discipline, respect, grit and self-confidence in a fun,
+		clean, and most importantly safe environment. They will also develop physical skills and technique
+	that can help your child defend themselves in a difficult situation.</p>
+	<p>Many of our students choose to compete in the sporting aspect of BJJ, gaining titles such as State
+		Champion, National Champion &amp; even World Champion. We also have many students who opt not
+	to compete, and we spend an equal amount of time and energy developing both.</p>
+	<p>All our instructors are accredited and highly experienced coaches with complete and regular working
+	with children checks.</p>
+	<p>Our students love our classes, come check them out for yourselves!</p>
+</div>
+<div class="hidden-lg hidden-md">
+	<p>Our classes are specifically tailored and designed for a child’s developing mind and body, with activities which teach real-life technique in a fun and engaging way.</p>
+	<p>Through our syllabus your child will develop discipline, respect, grit and self-confidence in a fun, clean, and most importantly safe environment. They will also develop physical skills and technique that can help your child defend themselves in a difficult situation.</p>
+	<p>Our students love our classes, come check them out for yourselves!</p>
+</div>
 <div id="kidscarouselcontainer">
 	<div id="kidsCar" class="carousel slide">
 		<!-- Wrapper for slides -->
@@ -29,10 +36,10 @@ with children checks.</p>
 	</div>
 </div>
 <h4>About the class</strong></h4>
-<ul class="basic"> 
-	<li><i class="fa fa-check" aria-hidden="true"></i> Be bully proof!</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Learn from accredited coaches with complete working with children checks</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Develop discipline, confidence, self esteem and respect</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Build strength, physical fitness, coordination &amp; mental toughness</li>
-	<li><i class="fa fa-check" aria-hidden="true"></i> Make friends &amp; have fun!</li>
+<ul class="basic list-group row"> 
+	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Be bully proof!</li>
+	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Learn from accredited coaches with complete working with children checks</li>
+	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Develop discipline, confidence, self esteem and respect</li>
+	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Build strength, physical fitness, coordination &amp; mental toughness</li>
+	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Make friends &amp; have fun!</li>
 </ul>
