--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -22,18 +22,20 @@ pageid: "timetable"
                 <div id="myTabsWrapper">
                     <ul id="myTabs" class="nav nav-tabs" role="tablist">
                         <li role="presentation" class="active">
-                            <a href="#home" data-toggle="tab" data-height="true" aria-controls="home" role="tab">BJJ</a>
+                            <a href="#bjj" data-toggle="tab" data-height="true" aria-controls="bjj" role="tab">BJJ</a>
                         </li>
                         <li role="presentation">
-                            <a href="#profile" data-toggle="tab" data-height="true" aria-controls="profile" role="tab">MT</a>
+                            <a href="#mt" data-toggle="tab" data-height="true" aria-controls="mt" role="tab">MT</a>
                         </li>
                         <li role="presentation">
-                            <a href="#messages" data-toggle="tab" data-height="true" aria-controls="messages" role="tab">Kids</a>
+                            <a href="#mma" data-toggle="tab" data-height="true" aria-controls="mma" role="tab">MMA</a>
+                        </li>
+                        <li role="presentation">
+                            <a href="#kids" data-toggle="tab" data-height="true" aria-controls="kids" role="tab">Kids</a>
                         </li>
                     </ul>
-
                     <div class="tab-content">
-                        <div role="tabpanel" class="tab-pane active" id="home">
+                        <div role="tabpanel" class="tab-pane active" id="bjj">
                             <div class="table-responsive">
                                 <table class="table table-bordered">
                                     <thead>
@@ -168,7 +170,7 @@ pageid: "timetable"
                                 </table>
                             </div>
                         </div>
-                        <div role="tabpanel" class="tab-pane" id="profile">
+                        <div role="tabpanel" class="tab-pane" id="mt">
                             <div class="table-responsive">
                                 <table class="table table-bordered">
                                     <thead>
@@ -184,19 +186,6 @@ pageid: "timetable"
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>9:00AM
-                                                <br>10:00AM
-                                                </td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td class="class-active">MMA
-                                                <br>Invitation Only</td>
-                                            <td></td>
-                                        </tr>
                                         <tr>
                                             <td>10:00AM
                                                 <br>11:00AM
@@ -232,19 +221,6 @@ pageid: "timetable"
                                             <td class="class-active">Muay Thai
                                                 <br>All Levels</td>
                                             <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                        </tr>
-                                        <tr>
-                                            <td>5:00PM
-                                                <br>6:00PM
-                                                </td>
-                                            <td></td>
-                                            <td></td>
-                                            <td></td>
-                                            <td class="class-active">MMA
-                                                <br>Invitation Only</td>
                                             <td></td>
                                             <td></td>
                                             <td></td>
@@ -304,7 +280,78 @@ pageid: "timetable"
                                 </table>
                             </div>
                         </div>
-                        <div role="tabpanel" class="tab-pane" id="messages">
+                        <div role="tabpanel" class="tab-pane" id="mma">
+                            <div class="table-responsive">
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th></th>
+                                            <th>mon</th>
+                                            <th>tue</th>
+                                            <th>wed</th>
+                                            <th>thu</th>
+                                            <th>fri</th>
+                                            <th>sat</th>
+                                            <th>sun</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>9:00AM
+                                                <br>10:00AM
+                                                </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td class="class-active">MMA
+                                                <br>Invitation Only</td>
+                                            <td></td>
+                                        </tr>
+                                        
+                                        <tr>
+                                            <td>11:00AM
+                                                <br>1:00PM
+                                                </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td class="class-active">Open Mat</td>
+                                        </tr>
+                                        <tr>
+                                            <td>5:00PM
+                                                <br>6:00PM
+                                                </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td class="class-active">MMA
+                                                <br>Invitation Only</td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td>6:00PM
+                                                <br>8:00PM
+                                                </td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+                                            <td class="class-active">Open Mat</td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="kids">
                             <div class="table-responsive">
                                 <table class="table table-bordered">
                                     <thead>
@@ -338,6 +385,7 @@ pageid: "timetable"
                     </div>
 
                 </div>
+                <p><a href="files/full_timetable.pdf">Download full timetable here</a></p>
             </div>
         </div>
     </div>
