--- a/src/html/partials/form.hbs
+++ b/src/html/partials/form.hbs
@@ -4,10 +4,12 @@
     <span class="error" aria-live="polite"></span>
     <input type="text" class="form-control" placeholder="Phone number" name="phone" id="phone" required data-validation-required-message="Please enter your phone number.">
     <select name="enquiry" id="enquiry">
-        <option selected disabled>Class to attend</option>
+        <option selected disabled>I'm interested in</option>
         <option value="bjj">BJJ</option>
         <option value="muaythai">Muay Thai</option>
         <option value="mma">MMA</option>
+        <option value="kidsclass">Kids classes</option>
+        <option value="general">General Enquiry</option>
     </select>
     <button type="submit" class="btn">{{button}}</button>
 </form>
