--- a/src/css/bjj.less
+++ b/src/css/bjj.less
@@ -3,7 +3,7 @@
 	display: none;
 }
 .bjj {
-	padding-top: 2%;
+	padding-top: 4%;
 	padding-bottom: @spacer-50;
 	background-image: url("../img/bg-bjj.png");
 	background-position: 100% -1%;
@@ -11,5 +11,12 @@
 	background-repeat: no-repeat;
 	@media (min-width: @screen-sm) {
 		background-position: 100% -4%;
+	}
+}
+@media (min-width: @screen-md) {
+	body.styles {
+		.side {
+			padding-top: 76%;
+		}
 	}
 }
