--- a/src/css/kids.less
+++ b/src/css/kids.less
@@ -1,10 +1,17 @@
 // Styles Kids
 
 .kids {
-	padding-top: 2%;
+	padding-top: 4%;
 	padding-bottom: @spacer-50;
 	background-image: url(../img/bg-kids.png);
     background-position: top right 0;
     background-size: 80%;
     background-repeat: no-repeat;
+}
+@media (min-width: @screen-md) {
+	body.styles {
+		.side {
+			padding-top: 69%;
+		}
+	}
 }
