--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -5,7 +5,7 @@ body.styles {
   padding-top: 3.9em;
   section {
     h1 {
-      font-size: .9em;
+      font-size: 0.9em;
       color: @yell-lt;
       text-transform: uppercase;
       font-weight: 900;
@@ -40,10 +40,11 @@ body.styles {
         font-size: 1.5em;
         color: @yell-lt;
         padding-right: @spacer-10;
+        float: left;
       }
       li {
         color: @white-lt;
-        padding-bottom: 10px;
+        padding: 10px;
         span {
           padding-left: @spacer-10;
           vertical-align: top;
