--- a/src/html/partials/global-nav.hbs
+++ b/src/html/partials/global-nav.hbs
@@ -1,6 +1,6 @@
 <div class="container relative-container">
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseone">
+        <button id="navbutton" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapseone">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
