Full timetable link

--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -385,7 +385,7 @@ pageid: "timetable"
                     </div>
 
                 </div>
-                <p><a href="files/full_timetable.pdf">Download full timetable here</a></p>
+                <p><a href="media/full_timetable.pdf">Download full timetable here</a></p>
             </div>
         </div>
     </div>
