Final round changes

--- a/src/css/bjj.less
+++ b/src/css/bjj.less
@@ -10,13 +10,11 @@
 	background-size: 80%;
 	background-repeat: no-repeat;
 	@media (min-width: @screen-sm) {
-		background-position: 100% -4%;
+		background-position: 100% -38px;
 	}
-}
-@media (min-width: @screen-md) {
-	body.styles {
+	@media (min-width: @screen-md) {
 		.side {
-			padding-top: 76%;
+			padding-top: 676px;
 		}
 	}
 }
