--- a/src/css/facilities.less
+++ b/src/css/facilities.less
@@ -35,7 +35,7 @@ body.facilities {
 		padding-top: 1em;
 	}
 	.thumbnail {
-		background-color: @blk-md;
+		background-color: @blk;
 		padding: 0;
 		padding-top: 1em;
 		padding-bottom: 1em;
