--- a/src/css/kids.less
+++ b/src/css/kids.less
@@ -4,14 +4,12 @@
 	padding-top: 4%;
 	padding-bottom: @spacer-50;
 	background-image: url(../img/bg-kids.png);
-    background-position: top right 0;
-    background-size: 80%;
-    background-repeat: no-repeat;
-}
-@media (min-width: @screen-md) {
-	body.styles {
+	background-position: top right 0;
+	background-size: 80%;
+	background-repeat: no-repeat;
+	@media (min-width: @screen-md) {
 		.side {
-			padding-top: 69%;
+			padding-top: 584px;
 		}
 	}
 }
