--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -1,10 +1,4 @@
 /* Navigation */
-.logo {
-  img {
-    width: 60%;
-  }
-}
-
 .nav > li {
   float: left;
 }
@@ -46,8 +40,12 @@
   }
   .phone {
     padding-top: 24px;
-    padding-left: 10px;
     font-weight: 600;
+  }
+  .logo {
+    @media (max-width: @screen-sm) {
+      padding-left: 5%;
+    }
   }
 }
 
@@ -80,7 +78,6 @@
 @media (min-width: @screen-md) {
   .navbar-nav {
     float: left;
-    margin-left: 30px;
     margin-top: 0;
     margin-bottom: 0;
     margin-right: 0;
@@ -127,6 +124,9 @@
   position: absolute;
   right: 20px;
   top: 10px;
+  i {
+    font-size: 1.5em;
+  }
 }
 
 @media (max-width: @screen-sm) {
