--- a/src/css/timetable.less
+++ b/src/css/timetable.less
@@ -22,6 +22,9 @@ body.timetable {
     .nav {
       li {
         margin-right: @spacer-20;
+        @media (max-width: @screen-xs) {
+          width: 100%;
+        }
       }
       a {
         padding: 1em 2em;
