--- a/src/html/pages/contact.hbs
+++ b/src/html/pages/contact.hbs
@@ -18,7 +18,7 @@ pageid: "contact"
                     <p class="big"><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@movementmartialarts.com.au">info@movementmartialarts.com.au</a></p>
                 </div>
                 <div class="col-md-4 black">
-                    {{> form button="Click to contact us!"}}
+                    {{> form contact=true button="Click to contact us!"}}
                 </div>
             </div>
         </div>
