--- a/src/html/pages/facilities.hbs
+++ b/src/html/pages/facilities.hbs
@@ -12,51 +12,8 @@ pageid: "facilities"
                 <p>We pride ourselves on keeping our facilities clean and hygienic at all times, including all equipment
                 used by students.</p>
                 <p>To get a feel for what we offer check out our photos below.</p>
-                <div class="row images">
-                    <div class="col-md-6">
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                    </div>
-                    <div class="col-md-6">
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                        <p>
-                            <a href="#" class="thumbnail">
-                                <img src="http://lorempixel.com/300/200/" class="img-responsive" alt="...">
-                            </a>
-                        </p>
-                    </div>
+                <div id="facilities-images" class="row">
+
                 </div>
             </div>
             <div class="col-md-3 col-md-offset-1 side">
