--- a/src/html/pages/faq.hbs
+++ b/src/html/pages/faq.hbs
@@ -9,34 +9,40 @@ pageid: "faq"
             <div class="col-md-8">
                 <h2>FAQ</h2>
                 <p><strong>Do I need to have previous experience to do these classes?</strong>
-                    <br>Our classes cater to all levels of experiOur classes cater to all levels of experience. Our fundamentals classes are tailored to complete beginners, and those with a small amount of experience. Our intermediate classes are for those who have graded and/or extensive experience in one of our styles.
+                    <br>Our classes cater to all levels of experience. Our fundamentals classes are tailored to complete beginners, and those with a small amount of experience. Our intermediate classes are for those who have graded and/or have extensive experience in one of our styles.
                 </p>
 
                 <p><strong>What do I need to bring?</strong>
                     <br>Yourself! Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won’t need shoes for these classes.
-                    <br>You’ll also want to have plenty of water to keep yourself hydrated, but we always have a fully stocked fridge where you can purchase one if you forget.
+                    <br>You'll also want to have plenty of water to keep yourself hydrated, but we always have a fully stocked fridge where you can purchase one if you forget.
                 </p>
 
                 <p><strong>Do you have showers?</strong>
-                    <br>Yes, we have 2 showers exclusively for use by our gym, as well as bathrooms on site.
+                    <br>Yes, we have 2 showers exclusively for use by our gym, as well as bathrooms and changing rooms on site.
                 </p>
 
-                <p><strong>Can anyone join MMA?</strong>
-                    <br>Our MMA classes are listed as 'invitation only'. This is because we require our students to have a reasonable level of understanding and skill in both BJJ and Muay Thai before they can train in MMA.
+                <p><strong>Can anyone start Mixed Martial Arts (MMA) classes?</strong>
+                    <br>Our MMA classes are listed as 'invitation only' because we require our students to have a reasonable level of understanding and skill in both BJJ and Muay Thai before they can train in MMA. This is for both their safety, and the safety of our other class members.
                 </p>
 
                 <p><strong>What should I wear to classes?</strong>
-                    <br>Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won’t need shoes for these classes.
+                    <br>Wear comfortable training clothes such as shorts or tights, and a t-shirt/singlet. You won't need shoes for these classes.
                 </p>
 
                 <p><strong>Do you have parking on site?</strong>
-                    <br>Yes
+                    <br>Yes, we have ample parking on site.
                 </p>
 
                 <p><strong>How long do the classes go for?</strong>
-                    <br>Fundamentals classes run for 1 hour. Intermediate run for 1hr15 min – 1hr 30min.
+                    <br>Fundamentals classes run for 1 hour. Intermediate classes run for 1hr15 min – 1hr 30min.
                 </p>
+
+                <p><strong>What age does my child need to be to participate in the kids classes?</strong>
+                    <br>We offer Brazilian Jiu Jitsu classes for children aged 5 - 14 years old. When they reach 14 years of age or over they may participate in the adult's Brazilian Jiu Jitsu classes.
+                <p>We currently do not offer children's Muay Thai Kickboxing classes. If your child is aged 14 or over they may participate in adult's Muay Thai Kickboxing classes.</p>
+                <p>If you are under 18 years of age please bring a parent or guardian when you come to your first class as they will need to sign a consent form.
+                </p>
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
