--- a/src/html/pages/freetrial.hbs
+++ b/src/html/pages/freetrial.hbs
@@ -20,7 +20,7 @@ pageid: "freetrial"
 					</ul>
 				</div>
 				<div class="col-md-4 yellow">
-					{{> form button="Book now!"}}
+					{{> form trial=true button="Book now!"}}
 				</div>
 			</div>
 		</div>
