--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -6,11 +6,6 @@ pageid: "home"
 <section class="intro-banner">
     <div class="container">
         <div class="row">
-            <div class="col-md-2 text-center hidden-md hidden-lg">
-                <img src="img/logo.png" height="45%" width="45%">
-            </div>
-        </div>
-        <div class="row">
             <div class="col-md-12 text-center">
                 <h1 class="hidden-sm hidden-xs">Movement <span>Martial Arts</span>{{!-- <br><small>Sydney's Premier Martial Arts Gym</small> --}}</h1>
                 <div class="buttons">
@@ -20,11 +15,10 @@ pageid: "home"
             </div>
         </div>
     </div>
-    <div class="line"></div>
     <div class="container">
         <div class="row blurb">
             <div class="col-md-8 text-center col-md-offset-2">
-                <p>Movement Martial Arts is a martial arts gym based in Macquarie Park, Sydney, offering classes and training in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). Our classes are suitable for ages 6+, for people of all sizes and skill levels.</p>
+                <p>Movement Martial Arts is a martial arts gym based in Macquarie Park, Sydney, offering classes and training in Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing, and Mixed Martial Arts (MMA). Our classes are suitable for ages 6+, for people of all fitness and skill levels.</p>
             </div>
         </div>
     </div>
@@ -34,7 +28,7 @@ pageid: "home"
         <div class="row">
             <div class="col-md-12">
                 <h2>Training Styles</h2>
-                <p>We hold classes in four seperate disciplines, and all of our classes are taught by experts in their style. You can read more about the classes we offer by clicking on one of the images below.</p></div>
+                <p>We hold classes in three separate disciplines with each taught by highly experienced coaches. You can read more about the classes we offer by clicking on one of the images below.</p></div>
             </div>
             <div class="row">
                 <div class="col-md-3 type">
@@ -91,13 +85,13 @@ pageid: "home"
             </a>
         </div>
     </div>
-</section>
+</section>come and try out our classes for a week, free of charge!
 <section class="cta">
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center">
                 <h2>One week free trial</h2>
-                <p>Come and try us out for one week, totally free of charge!</p>
+                <p>Come and try out our classes for a week, free of charge!</p>
                 <a href="timetable.html" class="btn btn-white">See timetable</a>
                 <a href="freetrial.html" class="btn btn-black">Come on!</a>
             </div>
