--- a/src/html/pages/timetable.hbs
+++ b/src/html/pages/timetable.hbs
@@ -7,10 +7,7 @@ pageid: "timetable"
     <div class="container">
         <div class="row">
         <div class="col-md-12">
-                <h2>Class schedules</h2>
-                <p>
-                    Quisque imperdiet erat placerat pretium sodales. Nullam sagittis felis vitae ante venenatis, id bibendum mi porta. Cras efficitur lectus sit amet massa mattis varius. Vivamus porttitor et odio in elementum. Curabitur ac sapien in felis dignissim viverra eget vel turpis. Pellentesque vel suscipit velit, sed maximus tellus. Phasellus in rutrum libero.
-                </p>
+                <h2>Class timetable</h2>
             </div>
         </div>
     </div>
