--- a/src/html/partials/footer.hbs
+++ b/src/html/partials/footer.hbs
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col-md-3">
                 <h3>Movement Martial Arts</h3>
-                <p>Building 1, 35 Waterloo Road, Macquarie Park 2113</p>
+                <p><a href="https://goo.gl/maps/4QRiiYNMZaw" target="_blank">Building 1, 35 Waterloo Road, Macquarie Park 2113, Sydney</a></p>
                 <p><a href="" data-toggle="modal" data-target="#sizzle">Get directions</a></p>
                 <p id="phonenumber">(02) 9887 1230</p>
             </div>
