--- a/src/html/partials/location.hbs
+++ b/src/html/partials/location.hbs
@@ -7,7 +7,7 @@
             </div>
             <div class="col-md-5">
                 <h2>Our location</h2>
-                <p class="big">Building 1,<br>35 Waterloo Road,<br>Macquarie Park 2113</p>
+                <p class="big">Building 1,<br>35 Waterloo Road,<br>Macquarie Park 2113,<br>Sydney</p>
             </div>
         </div>
     </div>
