--- a/src/css/about.less
+++ b/src/css/about.less
@@ -7,7 +7,7 @@ body.about {
     h4 {
       color: @white-lt;
       text-transform: uppercase;
-      font-size: 2.2em;
+      font-size: 1.9em;
       line-height: 1em;
       font-weight: 900;
       letter-spacing: 1px;
@@ -22,8 +22,11 @@ body.about {
       position: relative;
       h3 {
         position: absolute;
-        bottom: 0.4em;
+        bottom: -0.6em;
         left: 0.4em;
+        -webkit-text-fill-color: @white-lt;
+        -webkit-text-stroke-width: 2px;
+        -webkit-text-stroke-color: black;
       }
     }
     .panel {
