--- a/src/css/cta.less
+++ b/src/css/cta.less
@@ -12,7 +12,7 @@
 	}
 	h2 {
 		color: @blk;
-		font-size: 3.5em;
+		font-size: 2.5em;
 		font-weight: 900;
 	}
 	.btn {
@@ -22,6 +22,7 @@
 		padding: 15px;
 		padding-left: 30px;
 		padding-right: 30px;
+		width: 16em;
 	}
 	.btn-white {
 		background-color: @white-lt;
