--- a/src/css/forms.less
+++ b/src/css/forms.less
@@ -60,6 +60,10 @@
     -moz-box-shadow: none;
     box-shadow: none;
   }
+  textarea {
+    width: 100%;
+    padding: 12px;
+  }
   select {
     width: 100%;
     padding: 6px 12px;
