--- a/src/css/introbanner.less
+++ b/src/css/introbanner.less
@@ -7,8 +7,9 @@
   -o-transition: background 2s ease-out;
   transition: background 2s ease-out;
   background-repeat: no-repeat;
-  background-position: center 0;
-  padding-top: 23%;
+  background-position: center 50px;
+  background-size: contain;
+
   h1 {
     font-weight: 700;
     font-style: normal;
@@ -46,6 +47,7 @@
     padding-right: 30px;
     margin-bottom: @spacer-20;
     letter-spacing: 2px;
+    width: 12em;
     &:hover {
       color: @blk;
       background-color: @yell-lt;
@@ -56,13 +58,31 @@
     p {
       color: @white-lt;
     }
+    @media (max-width: @screen-xs) {
+      padding-top: 0;
+    }
   }
   .learnmore {
     margin-right: @spacer-20;
+    @media (max-width: @screen-xs) {
+      margin-right: 0;
+    }
   }
   @media (min-width: @screen-lg) {
+    padding-top: 25%;
+    background-position: center 0;
     .btn {
       margin-bottom: 0;
     }
+  }
+  @media (min-width: @screen-md) and (max-width: @screen-lg) {
+    padding-top: 31%;
+  }
+  @media (min-width: @screen-sm) and (max-width: @screen-md) {
+    padding-top: 50%;
+  }
+  @media (max-width: @screen-sm) {
+    padding-top: 64%;
+    background-position: center 80px;
   }
 }
