--- a/src/css/introstyles.less
+++ b/src/css/introstyles.less
@@ -17,12 +17,9 @@
 		padding-left: @spacer-30;
 		position: absolute;
 		span {
-			padding: @spacer-10;
-			display: block;
-			color: white;
-			text-shadow: 0 2px black;
-			background: #333;
-			background: rgba(255, 255, 255, 0.3);
+			-webkit-text-fill-color: @white-lt;
+			-webkit-text-stroke-width: 2px;
+			-webkit-text-stroke-color: black;
 		}
 	}
 	.btn {
