--- a/src/css/maps.less
+++ b/src/css/maps.less
@@ -1,6 +1,17 @@
 /* Google Map */
 
 #map {
-  height: 400px;
-  width: 100%;
+	height: 400px;
+	width: 100%;
+}
+
+.google-map {
+	// iframe,
+	// object,
+	// embed {
+	// 	max-width: 100%;
+	// }
+	&.scrolloff {
+		pointer-events: none;
+	}
 }
