--- a/src/css/mma.less
+++ b/src/css/mma.less
@@ -4,14 +4,12 @@
 	padding-top: 4%;
 	padding-bottom: @spacer-50;
 	background-image: url(../img/bg-mma.png);
-	background-position: top right 0;
+	background-position: top -2px right 0;
 	background-size: 80%;
 	background-repeat: no-repeat;
-}
-@media (min-width: @screen-md) {
-	body.styles {
+	@media (min-width: @screen-md) {
 		.side {
-			padding-top: 58%;
+			padding-top: 499px;
 		}
 	}
 }
