--- a/src/css/muaythai.less
+++ b/src/css/muaythai.less
@@ -7,11 +7,9 @@
 	background-position: top right 0;
 	background-size: 80%;
 	background-repeat: no-repeat;
-}
-@media (min-width: @screen-md) {
-	body.styles {
+	@media (min-width: @screen-md) {
 		.side {
-			padding-top: 53%;
+			padding-top: 507px;
 		}
 	}
 }
