--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -36,6 +36,7 @@ body.styles {
     ul.basic {
       list-style-type: none;
       padding: 0;
+      padding-left: 2em;
       i {
         font-size: 1.5em;
         color: @yell-lt;
@@ -45,24 +46,27 @@ body.styles {
       li {
         color: @white-lt;
         padding: 10px;
-        span {
+        .featureList li span {
           padding-left: @spacer-10;
           vertical-align: top;
           font-weight: 900;
         }
+        &:before {
+          position: absolute;
+          margin-left: -1.3em;
+          font-family: FontAwesome;
+          font-weight: 900;
+          font-size: 1.3em;
+          content: "\f00c";
+          color: @yell-lt;
+        }
       }
     }
-  }
-  .side {
-    padding-top: 5%;
   }
   @media (min-width: @screen-sm) {
     padding-top: 7.8em;
   }
   @media (min-width: @screen-md) {
     padding-top: 4.5em;
-    .side {
-      padding-top: 50%;
-    }
   }
 }
