--- a/src/html/layouts/default.hbs
+++ b/src/html/layouts/default.hbs
@@ -20,6 +20,6 @@
 		{{> modals}}
         <script src="libs/js/libs.js"></script>
         <!--script src="js/script.js"></script-->
-        <script async src="js/script.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
