--- a/src/html/pages/about.hbs
+++ b/src/html/pages/about.hbs
@@ -17,27 +17,27 @@ pageid: "about"
                     <h3><span>Andrew Husmann</span></h3>
                     <p class="text-center"><img src="img/team-andrew.jpg" class="img-responsive"></p>
                 </div>
-                <p>Andrew is an experienced and certified coach, and has spent many years coaching world class competitors in both childrens and adults BJJ, Muay Thai Kickboxing and MMA.</p>
-                <p>He is currently a brown belt in BJJ, holds both Pan Pacific and national titles, and has competed at the World Championships.</p>
-                <p>He holds a black shirt rank in Muay Thai Kickboxing with extensive training in Thailand, and has fought professionally.</p>
+                <p>Andrew is an experienced and certified coach who has spent many years coaching world class competitors in both childrens and adults Brazilian Jiu Jitsu (BJJ), Muay Thai Kickboxing and MMA.</p>
+                <p>He is a black belt in BJJ, holds both Pan Pacific and National titles, and has competed at the World Championships on numerous occasions.</p>
+                <p>Andrew holds a black singlet rank in Muay Thai Kickboxing with extensive training in Thailand, and has fought professionally.</p>
             </div>
             <div class="col-md-4">
                 <div class="img">
                     <h3>Billy<br>Sam</h3>
                     <p class="text-center"><img src="img/team-billy.jpg" class="img-responsive"></p>
                 </div>
-                <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu.</p>
+                <p>Billy is an experienced and certified coach, most recently coaching kids and adults in Jiu Jitsu and Adults Muay Thai Kickboxing.</p>
                 <p>He holds a Bachelor's Degree in Exercise and Sports Science, and Certificate 3 and 4 in Fitness.</p>
-                <p>He is currently a brown belt in BJJ, holds national and Pan Pacific titles and has competed at the World Championships on numerous occasions.</p>
+                <p>Billy is a black belt in BJJ, holds both Pan Pacific and National titles, and has competed at the World Championships on numerous occasions.</p>
             </div>
             <div class="col-md-4">
                 <div class="img">
                     <h3>Wade<br>Huang</h3>
                     <p class="text-center"><img src="img/team-wade.jpg" class="img-responsive"></p>
                 </div>
-                <p>Wade is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p>
-                <p>Wade is currently a brown belt in BJJ, has medalled in various competitions nationally and has competed at the World Championships on numerous occasions.</p>
-                <p>Wade is an experienced and certified coach, teaching BJJ classes and coaching in Muay Thai Kickboxing at Movement.</p>
+                <p>Wade is an experienced and certified coach, teaching BJJ and Muay Thai Kickboxing classes at Movement Martial Arts.</p>
+                <p>He is a reformed nine-to-fiver who has found his passion in Jiu Jitsu.</p>
+                <p>Wade is a black belt in BJJ, has medalled in various competitions nationally and has competed at the World Championships on numerous occasions.</p>
             </div>
         </div>
     </div>
@@ -95,7 +95,6 @@ pageid: "about"
         <div class="row">
             <div class="col-md-12">
                 <h2>Instagram Feed</h2>
-                <p>Check out some of the latest instagram posts from our Muay Thai and BJJ classes!</p>
                 <!-- SnapWidget -->
                 <script src="https://snapwidget.com/js/snapwidget.js"></script>
                 <iframe src="https://snapwidget.com/embed/319439" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
