--- a/src/html/pages/muaythai.hbs
+++ b/src/html/pages/muaythai.hbs
@@ -26,12 +26,20 @@ type: "muaythai"
 	</div>
 </div>
 <h4>About the class</strong></h4>
-<ul class="basic list-group row"> 
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout – build strength, physical fitness and coordination</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Highly experienced coaches</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Learn stand up fighting techniques from experienced and accredited coaches</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Build confidence</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Effective in self defence</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Progress to compete professionally</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Meet new people &amp; have fun!</li>
-</ul>
+<div class="row">
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Full cardiovascular workout – build strength, physical fitness and coordination</li>
+			<li>Highly experienced coaches</li>
+			<li>Learn stand up fighting techniques from experienced and accredited coaches</li>
+			<li>Build confidence</li>
+		</ul>
+	</div>
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Effective in self defence</li>
+			<li>Progress to compete professionally</li>
+			<li>Meet new people &amp; have fun!</li>
+		</ul>
+	</div>
+</div>
