--- a/src/html/pages/bjj.hbs
+++ b/src/html/pages/bjj.hbs
@@ -25,11 +25,19 @@ type: "bjj"
 	</div>
 </div>
 <h4>About the class</strong></h4>
-<ul class="basic list-group row"> 
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Full cardiovascular workout - build strength, physical fitness and coordination</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Learn ground fighting techniques from experienced and accredited coaches</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Build confidence</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Effective in self defence</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Compete in tournaments</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Meet new people and have fun!</li>
-</ul>
+<div class="row">
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Full cardiovascular workout - build strength, physical fitness and coordination</li>
+			<li>Learn ground fighting techniques from experienced and accredited coaches</li>
+			<li>Build confidence</li>
+		</ul>
+	</div>
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Effective in self defence</li>
+			<li>Compete in tournaments</li>
+			<li>Meet new people and have fun!</li>
+		</ul>
+	</div>
+</div>
