--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -93,7 +93,7 @@ pageid: "home"
                 <h2>One week free trial</h2>
                 <p>Come and try out our classes for a week, free of charge!</p>
                 <a href="timetable.html" class="btn btn-white">See timetable</a>
-                <a href="freetrial.html" class="btn btn-black">Come on!</a>
+                <a href="freetrial.html" class="btn btn-black">Book me in!</a>
             </div>
         </div>
     </div>
