--- a/src/html/pages/kids.hbs
+++ b/src/html/pages/kids.hbs
@@ -36,10 +36,18 @@ type: "kids"
 	</div>
 </div>
 <h4>About the class</strong></h4>
-<ul class="basic list-group row"> 
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Be bully proof!</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Learn from accredited coaches with complete working with children checks</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Develop discipline, confidence, self esteem and respect</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Build strength, physical fitness, coordination &amp; mental toughness</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Make friends &amp; have fun!</li>
-</ul>
+<div class="row">
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Be bully proof!</li>
+			<li>Learn from accredited coaches with complete working with children checks</li>
+			<li>Develop discipline, confidence, self esteem and respect</li>
+		</ul>
+	</div>
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Build strength, physical fitness, coordination &amp; mental toughness</li>
+			<li>Make friends &amp; have fun!</li>
+		</ul>
+	</div>
+</div>
