--- a/src/html/pages/mma.hbs
+++ b/src/html/pages/mma.hbs
@@ -25,10 +25,18 @@ type: "mma"
 	</div>
 </div>
 <h4>About the class</strong></h4>
-<ul class="basic list-group row"> 
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Learn how to incorporate multiple fighting styles</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Develop physical techniques in a safe environment</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Develop strategy</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Intense physical workout</li>
-	<li class="list-group-item col-md-6 col-sm-12"><i class="fa fa-check" aria-hidden="true"></i> Compete professionally</li>
-</ul>
+<div class="row">
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Learn how to incorporate multiple fighting styles</li>
+			<li>Develop physical techniques in a safe environment</li>
+			<li>Develop strategy</li>
+		</ul>
+	</div>
+	<div class="col-md-6 col-sm-12">
+		<ul class="basic"> 
+			<li>Intense physical workout</li>
+			<li>Compete professionally</li>
+		</ul>
+	</div>
+</div>
